--- a/public/crx/vera/style/invite.less
+++ b/public/crx/vera/style/invite.less
@@ -31,18 +31,9 @@
       max-height: 90px;
       overflow: hidden;
     }
-    .btn {
-      border: none;
-      white-space: nowrap;
-      background-color: var(--camera-bg-color);
-      color: var(--font-color);
-      border-radius: var(--border-radius);
-      padding: 4px 10px;
-      cursor: pointer;
-      &:active {
-        transform: scale(0.9);
-      }
-    }
+    // .btn {
+    //   .btn();
+    // }
   }
   .users {
     width: -webkit-fill-available;
@@ -68,16 +59,9 @@
       .name {
         font-size: 10px;
       }
-      .btn {
-        border: none;
-        white-space: nowrap;
-        background-color: var(--camera-bg-color);
-        color: var(--font-color);
-        border-radius: 15px;
-        font-size: 12px;
-        padding: 4px 10px;
-        cursor: pointer;
-      }
+      // .btn {
+      //   .btn();
+      // }
     }
   }
 }
