--- a/public/crx/vera/style/widget.less
+++ b/public/crx/vera/style/widget.less
@@ -28,7 +28,7 @@
     border: none;
     outline: none;
     background-color: transparent;
-    background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/logo.png');
+    background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -46,14 +46,7 @@
     padding: 2px 5px;
     line-height: 1.1;
   }
-  > .drag {
-    border-radius: 4px;
-    width: 12px;
-    height: 30px;
-    background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/drag-vertical.svg');
-    background-size: cover;
-    background-color: rgba(238, 238, 238, 0.4);
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+  // > .drag {
+  //   .drag();
+  // }
 }
