--- a/public/crx/vera/style/camera.less
+++ b/public/crx/vera/style/camera.less
@@ -17,8 +17,11 @@
   // border: 1px dashed #5c46e3;
   //   }
   &:hover {
-    .video .opts {
-      visibility: visible;
+    .video {
+      .username,
+      .opts {
+        visibility: visible;
+      }
     }
   }
   &[bg-rm-status='processing'] {
@@ -59,17 +62,16 @@
   .video {
     position: relative;
     display: flex;
-    // .cover_opts {
-    //   position: absolute;
-    //   right: 5px;
-    //   top: 5px;
-    //   z-index: 8;
-    // }
     .username {
+      visibility: hidden;
       position: absolute;
       top: 5px;
       right: 5px;
-      padding: 8px 10px;
+      cursor: text;
+      padding: 6px 10px;
+      border: none;
+      font-size: 18px;
+      color: var(--font-color);
       border-radius: var(--border-radius);
       background-color: var(--button-bg-color);
     }
@@ -102,31 +104,31 @@
         //   opacity: 1;
         // }
         &.bg {
-          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.off.svg');
+          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/bg.rm.off.svg');
         }
         &.video {
-          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.off.svg');
+          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.off.svg');
         }
         &.audio {
-          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.off.svg');
+          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/audio.off.svg');
         }
         &.pin {
-          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/pin.svg');
+          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/pin.svg');
         }
       }
     }
     // 打开态
     &[bg='true'] .opts .opt.bg {
-      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.svg');
+      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/bg.rm.svg');
     }
     &[video='true'] .opts .opt.video {
-      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.on.svg');
+      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.on.svg');
     }
     &[audio='true'] .opts .opt.audio {
-      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.on.svg');
+      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/audio.on.svg');
     }
     &[pin='true'] .opts .opt.pin {
-      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/pin.off.svg');
+      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/pin.off.svg');
     }
     video {
       width: 200px;
@@ -154,7 +156,7 @@
       background-position: center;
       &.user {
         // display: none;
-        background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/user.svg');
+        background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/user.svg');
       }
       &.error {
         display: none;
