--- a/public/crx/vera/style/join.css
+++ b/public/crx/vera/style/join.css
@@ -12,19 +12,16 @@
   border-radius: var(--border-radius);
 }
 .join .btn {
-  border: none;
-  white-space: nowrap;
-  background-color: var(--camera-bg-color);
-  color: var(--font-color);
-  border-radius: var(--border-radius);
-  padding: 8px 10px;
-  cursor: pointer;
+  font-size: 22px;
 }
 .join .username {
-  min-width: 100px;
+  margin-bottom: 20px;
+  min-width: 120px;
+  text-align: center;
+  padding: 10px 12px;
+  cursor: text;
+  font-size: 18px;
+  color: var(--font-color);
   border-radius: var(--border-radius);
   background-color: var(--button-bg-color);
-  padding: 10px;
-  color: var(--font-color);
-  font-size: 14px;
 }
