--- a/public/crx/vera/style/join.less
+++ b/public/crx/vera/style/join.less
@@ -3,7 +3,6 @@
   height: 200px;
   width: 200px;
   display: flex;
-
   flex-direction: column-reverse;
   align-items: center;
   gap: 10px;
@@ -12,20 +11,18 @@
   background: transparent;
   border-radius: var(--border-radius);
   .btn {
-    border: none;
-    white-space: nowrap;
-    background-color: var(--camera-bg-color);
-    color: var(--font-color);
-    border-radius: var(--border-radius);
-    padding: 8px 10px;
-    cursor: pointer;
+    // .btn();
+    font-size: 22px;
   }
   .username {
-    min-width: 100px;
+    margin-bottom: 20px;
+    min-width: 120px;
+    text-align: center;
+    padding: 10px 12px;
+    cursor: text;
+    font-size: 18px;
+    color: var(--font-color);
     border-radius: var(--border-radius);
     background-color: var(--button-bg-color);
-    padding: 10px;
-    color: var(--font-color);
-    font-size: 14px;
   }
 }
