--- a/public/crx/vera/style.less
+++ b/public/crx/vera/style.less
@@ -2,6 +2,9 @@
 @import (inline) './style/reset.css';
 // theme
 @import './style/theme.less';
+// common
+@import './style/comm.less';
+
 // widget
 @import './style/widget.less';
 // panel
