--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -138,6 +138,29 @@ table {
   --font-color: #fff;
   --border-radius: 5px;
 }
+.btn {
+  border: none;
+  white-space: nowrap;
+  background-color: var(--camera-bg-color);
+  color: var(--font-color);
+  border-radius: var(--border-radius);
+  padding: 4px 10px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in;
+}
+.btn:active {
+  transform: scale(0.9);
+}
+.drag {
+  border-radius: 4px;
+  width: 12px;
+  height: 30px;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/drag-vertical.svg');
+  background-size: cover;
+  background-color: rgba(238, 238, 238, 0.4);
+  background-repeat: no-repeat;
+  background-position: center;
+}
 #PORTAL_VERA_WIDGET {
   cursor: pointer;
   z-index: 999;
@@ -167,7 +190,7 @@ table {
   border: none;
   outline: none;
   background-color: transparent;
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/logo.png');
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/logo.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -185,16 +208,6 @@ table {
   padding: 2px 5px;
   line-height: 1.1;
 }
-#PORTAL_VERA_WIDGET > .drag {
-  border-radius: 4px;
-  width: 12px;
-  height: 30px;
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/drag-vertical.svg');
-  background-size: cover;
-  background-color: rgba(238, 238, 238, 0.4);
-  background-repeat: no-repeat;
-  background-position: center;
-}
 #PORTAL_VERA_PANEL {
   color: #fff;
   z-index: 999;
@@ -208,12 +221,12 @@ table {
   min-height: 200px;
   max-height: 100vh;
   overflow: visible;
-  background: transparent;
   padding: 12px;
   border: none;
   border-radius: var(--border-radius);
   transition: all 0.5s ease-in-out;
   transition-property: background, width, height;
+  background: var(--panel-bg-color);
 }
 #PORTAL_VERA_PANEL[layout='min'] {
   width: 260px;
@@ -225,6 +238,9 @@ table {
 #PORTAL_VERA_PANEL[layout='min'] .invite,
 #PORTAL_VERA_PANEL[layout='min'] .join {
   display: none;
+}
+#PORTAL_VERA_PANEL[layout='min'] .close {
+  bottom: 0;
 }
 #PORTAL_VERA_PANEL[layout='min'] .close,
 #PORTAL_VERA_PANEL[layout='min'] .topbar,
@@ -275,14 +291,28 @@ table {
 #PORTAL_VERA_PANEL[data-status='disconnected']:after {
   background-color: #ccc;
 }
-#PORTAL_VERA_PANEL[data-status='connected'] {
+#PORTAL_VERA_PANEL[data-status='streaming'] {
+  background: transparent;
+}
+#PORTAL_VERA_PANEL[data-status='connected'],
+#PORTAL_VERA_PANEL[data-status='streaming'] {
   padding-top: 40px;
 }
-#PORTAL_VERA_PANEL[data-status='connected']:hover .topbar {
+#PORTAL_VERA_PANEL[data-status='connected']:hover,
+#PORTAL_VERA_PANEL[data-status='streaming']:hover {
+  background: var(--panel-bg-color);
+}
+#PORTAL_VERA_PANEL[data-status='connected']:hover .topbar,
+#PORTAL_VERA_PANEL[data-status='streaming']:hover .topbar {
   display: flex;
 }
-#PORTAL_VERA_PANEL[data-status='connected']:after {
+#PORTAL_VERA_PANEL[data-status='connected']:after,
+#PORTAL_VERA_PANEL[data-status='streaming']:after {
   background-color: #48ba2b;
+}
+#PORTAL_VERA_PANEL[data-status='connected'] .topbar,
+#PORTAL_VERA_PANEL[data-status='connected']:hover .topbar {
+  display: none;
 }
 #PORTAL_VERA_PANEL[data-status='error']:after {
   background-color: #d7322d;
@@ -299,16 +329,24 @@ table {
   width: 40px;
   height: 40px;
   opacity: 0.8;
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/tel.svg');
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/tel.svg');
   background-size: cover;
 }
 #PORTAL_VERA_PANEL > .close:hover {
   opacity: 1;
 }
+#PORTAL_VERA_PANEL .drag {
+  position: absolute;
+  bottom: 12px;
+  left: -30px;
+  width: 20px;
+  height: 20px;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/drag.svg');
+}
 #PORTAL_VERA_PANEL .topbar {
   display: none;
   position: absolute;
-  top: 5px;
+  top: 10px;
   left: 0;
   justify-content: space-between;
   width: -webkit-fill-available;
@@ -323,7 +361,7 @@ table {
   background-color: var(--button-bg-color);
   background-repeat: no-repeat;
   background-size: contain;
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/invite.svg');
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/invite.svg');
   background-position: center;
   background-size: 14px;
 }
@@ -388,6 +426,7 @@ table {
   border: none;
   background: transparent;
 }
+#PORTAL_VERA_PANEL .cameras .camera:hover .video .username,
 #PORTAL_VERA_PANEL .cameras .camera:hover .video .opts {
   visibility: visible;
 }
@@ -425,10 +464,15 @@ table {
   display: flex;
 }
 #PORTAL_VERA_PANEL .cameras .camera .video .username {
+  visibility: hidden;
   position: absolute;
   top: 5px;
   right: 5px;
-  padding: 8px 10px;
+  cursor: text;
+  padding: 6px 10px;
+  border: none;
+  font-size: 18px;
+  color: var(--font-color);
   border-radius: var(--border-radius);
   background-color: var(--button-bg-color);
 }
@@ -459,28 +503,34 @@ table {
   margin-right: 6px;
 }
 #PORTAL_VERA_PANEL .cameras .camera .video .opts .opt.bg {
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.off.svg');
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/bg.rm.off.svg');
 }
 #PORTAL_VERA_PANEL .cameras .camera .video .opts .opt.video {
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.off.svg');
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.off.svg');
 }
 #PORTAL_VERA_PANEL .cameras .camera .video .opts .opt.audio {
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.off.svg');
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/audio.off.svg');
 }
 #PORTAL_VERA_PANEL .cameras .camera .video .opts .opt.pin {
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/pin.svg');
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/pin.svg');
 }
 #PORTAL_VERA_PANEL .cameras .camera .video[bg='true'] .opts .opt.bg {
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/bg.rm.svg');
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/bg.rm.svg');
 }
 #PORTAL_VERA_PANEL .cameras .camera .video[video='true'] .opts .opt.video {
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/video.on.svg');
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.on.svg');
 }
 #PORTAL_VERA_PANEL .cameras .camera .video[audio='true'] .opts .opt.audio {
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/audio.on.svg');
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/audio.on.svg');
 }
 #PORTAL_VERA_PANEL .cameras .camera .video[pin='true'] .opts .opt.pin {
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/pin.off.svg');
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/pin.off.svg');
+}
+#PORTAL_VERA_PANEL .cameras .camera .video[waiting='true'] video {
+  visibility: hidden;
+}
+#PORTAL_VERA_PANEL .cameras .camera .video[waiting='true'] .mask.waiting {
+  display: flex;
 }
 #PORTAL_VERA_PANEL .cameras .camera .video video {
   width: 200px;
@@ -506,17 +556,22 @@ table {
   background-size: 45%;
   background-repeat: no-repeat;
   background-position: center;
-}
-#PORTAL_VERA_PANEL .cameras .camera .video .mask.user {
-  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/user.svg');
-}
-#PORTAL_VERA_PANEL .cameras .camera .video .mask.error {
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   font-size: 14px;
   font-weight: 800;
+}
+#PORTAL_VERA_PANEL .cameras .camera .video .mask.user {
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/user.svg');
+}
+#PORTAL_VERA_PANEL .cameras .camera .video .mask.error {
+  display: none;
   color: #ec3636;
+}
+#PORTAL_VERA_PANEL .cameras .camera .video .mask.waiting {
+  display: none;
+  background-color: var(--camera-bg-color);
 }
 #PORTAL_VERA_PANEL .cameras .camera .video[video='true'] .mask.user {
   display: none;
@@ -572,18 +627,6 @@ table {
   max-height: 90px;
   overflow: hidden;
 }
-#PORTAL_VERA_PANEL .invite .link .btn {
-  border: none;
-  white-space: nowrap;
-  background-color: var(--camera-bg-color);
-  color: var(--font-color);
-  border-radius: var(--border-radius);
-  padding: 4px 10px;
-  cursor: pointer;
-}
-#PORTAL_VERA_PANEL .invite .link .btn:active {
-  transform: scale(0.9);
-}
 #PORTAL_VERA_PANEL .invite .users {
   width: -webkit-fill-available;
   display: flex;
@@ -610,16 +653,6 @@ table {
 #PORTAL_VERA_PANEL .invite .users .user .name {
   font-size: 10px;
 }
-#PORTAL_VERA_PANEL .invite .users .user .btn {
-  border: none;
-  white-space: nowrap;
-  background-color: var(--camera-bg-color);
-  color: var(--font-color);
-  border-radius: 15px;
-  font-size: 12px;
-  padding: 4px 10px;
-  cursor: pointer;
-}
 #PORTAL_VERA_PANEL .join {
   box-sizing: border-box;
   height: 200px;
@@ -634,19 +667,16 @@ table {
   border-radius: var(--border-radius);
 }
 #PORTAL_VERA_PANEL .join .btn {
-  border: none;
-  white-space: nowrap;
-  background-color: var(--camera-bg-color);
-  color: var(--font-color);
-  border-radius: var(--border-radius);
-  padding: 8px 10px;
-  cursor: pointer;
+  font-size: 22px;
 }
 #PORTAL_VERA_PANEL .join .username {
-  min-width: 100px;
+  margin-bottom: 20px;
+  min-width: 120px;
+  text-align: center;
+  padding: 10px 12px;
+  cursor: text;
+  font-size: 18px;
+  color: var(--font-color);
   border-radius: var(--border-radius);
   background-color: var(--button-bg-color);
-  padding: 10px;
-  color: var(--font-color);
-  font-size: 14px;
 }
