--- a/public/crx/vera/style/widget.css
+++ b/public/crx/vera/style/widget.css
@@ -2,7 +2,7 @@
   cursor: pointer;
   z-index: 999;
   position: fixed;
-  left: 0;
+  left: -20px;
   bottom: 30px;
   width: 60px;
   height: 50px;
@@ -10,22 +10,40 @@
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
   padding: 5px 5px 5px 0;
-  transform: translateX(-20px);
   display: none;
   align-items: center;
   justify-content: center;
+  transition: left 0.2s ease-in-out;
 }
 #PORTAL_VERA_WIDGET.show {
   display: flex !important;
 }
-#PORTAL_VERA_WIDGET:hover {
-  transform: translateX(-5px);
-}
-#PORTAL_VERA_WIDGET > .portal_logo {
+#PORTAL_VERA_WIDGET:after {
+  display: none;
+  position: absolute;
+  right: -50px;
+  top: 50%;
+  transform: translateY(-50%);
+  content: '';
   width: 40px;
   height: 40px;
-  border: none;
-  outline: none;
+  border-radius: 50%;
+  border: 1px solid #333;
+  background-color: transparent;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.svg');
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+#PORTAL_VERA_WIDGET:hover {
+  left: 0;
+}
+#PORTAL_VERA_WIDGET:hover:after {
+  display: block;
+}
+#PORTAL_VERA_WIDGET > .portal_logo {
+  width: 30px;
+  height: 30px;
   background-color: transparent;
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/logo.png');
   background-size: contain;
