--- a/public/crx/vera/style/widget.less
+++ b/public/crx/vera/style/widget.less
@@ -3,7 +3,7 @@
   cursor: pointer;
   z-index: 999;
   position: fixed;
-  left: 0;
+  left: -22px;
   bottom: 30px;
   width: 60px;
   height: 50px;
@@ -11,22 +11,39 @@
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
   padding: 5px 5px 5px 0;
-  // transition: all 0.5s ease-in;
-  transform: translateX(-20px);
   display: none;
   align-items: center;
   justify-content: center;
+  transition: left 0.2s ease-in-out;
   &.show {
     display: flex !important;
   }
-  &:hover {
-    transform: translateX(-5px);
-  }
-  > .portal_logo {
+  &:after {
+    display: none;
+    position: absolute;
+    right: -50px;
+    top: 50%;
+    transform: translateY(-50%);
+    content: '';
     width: 40px;
     height: 40px;
-    border: none;
-    outline: none;
+    border-radius: 50%;
+    border: 1px solid #333;
+    background-color: transparent;
+    background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.svg');
+    background-size: 70%;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  &:hover {
+    left: 0;
+    &:after {
+      display: block;
+    }
+  }
+  > .portal_logo {
+    width: 30px;
+    height: 30px;
     background-color: transparent;
     background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/logo.png');
     background-size: contain;
@@ -46,7 +63,7 @@
     padding: 2px 5px;
     line-height: 1.1;
   }
-  // > .drag {
-  //   .drag();
-  // }
+  > .drag {
+    .drag();
+  }
 }
