--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -165,7 +165,7 @@ table {
   cursor: pointer;
   z-index: 999;
   position: fixed;
-  left: 0;
+  left: -22px;
   bottom: 30px;
   width: 60px;
   height: 50px;
@@ -173,22 +173,40 @@ table {
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
   padding: 5px 5px 5px 0;
-  transform: translateX(-20px);
   display: none;
   align-items: center;
   justify-content: center;
+  transition: left 0.2s ease-in-out;
 }
 #PORTAL_VERA_WIDGET.show {
   display: flex !important;
 }
-#PORTAL_VERA_WIDGET:hover {
-  transform: translateX(-5px);
-}
-#PORTAL_VERA_WIDGET > .portal_logo {
+#PORTAL_VERA_WIDGET:after {
+  display: none;
+  position: absolute;
+  right: -50px;
+  top: 50%;
+  transform: translateY(-50%);
+  content: '';
   width: 40px;
   height: 40px;
-  border: none;
-  outline: none;
+  border-radius: 50%;
+  border: 1px solid #333;
+  background-color: transparent;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.svg');
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+#PORTAL_VERA_WIDGET:hover {
+  left: 0;
+}
+#PORTAL_VERA_WIDGET:hover:after {
+  display: block;
+}
+#PORTAL_VERA_WIDGET > .portal_logo {
+  width: 30px;
+  height: 30px;
   background-color: transparent;
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/logo.png');
   background-size: contain;
@@ -207,6 +225,16 @@ table {
   color: #fff;
   padding: 2px 5px;
   line-height: 1.1;
+}
+#PORTAL_VERA_WIDGET > .drag {
+  border-radius: 4px;
+  width: 12px;
+  height: 30px;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/drag-vertical.svg');
+  background-size: cover;
+  background-color: rgba(238, 238, 238, 0.4);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 #PORTAL_VERA_PANEL {
   color: #fff;
@@ -281,6 +309,10 @@ table {
   height: 10px;
   background-color: #999;
   border-radius: 50%;
+}
+#PORTAL_VERA_PANEL[data-status='uninitialized'] {
+  width: 440px;
+  height: 224px;
 }
 #PORTAL_VERA_PANEL[data-status='open']:after {
   background-color: #ee7f3d;
@@ -509,6 +541,7 @@ table {
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.off.svg');
 }
 #PORTAL_VERA_PANEL .cameras .camera .video .opts .opt.audio {
+  background-color: #863733;
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/audio.off.svg');
 }
 #PORTAL_VERA_PANEL .cameras .camera .video .opts .opt.pin {
@@ -521,6 +554,7 @@ table {
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.on.svg');
 }
 #PORTAL_VERA_PANEL .cameras .camera .video[audio='true'] .opts .opt.audio {
+  background-color: var(--button-bg-color);
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/audio.on.svg');
 }
 #PORTAL_VERA_PANEL .cameras .camera .video[pin='true'] .opts .opt.pin {
@@ -531,6 +565,13 @@ table {
 }
 #PORTAL_VERA_PANEL .cameras .camera .video[waiting='true'] .mask.waiting {
   display: flex;
+}
+#PORTAL_VERA_PANEL .cameras .camera .video[waiting='true'] .mask.waiting .loading .circle {
+  animation: loading-rotate 1.5s infinite ease-in-out;
+  /*给svg也加上一个旋转动画*/
+}
+#PORTAL_VERA_PANEL .cameras .camera .video[waiting='true'] .mask.waiting .loading .circle .path {
+  animation: loading-dash 1.5s ease-in-out infinite;
 }
 #PORTAL_VERA_PANEL .cameras .camera .video video {
   width: 200px;
@@ -572,6 +613,31 @@ table {
 #PORTAL_VERA_PANEL .cameras .camera .video .mask.waiting {
   display: none;
   background-color: var(--camera-bg-color);
+  width: 100%;
+  height: 100%;
+}
+#PORTAL_VERA_PANEL .cameras .camera .video .mask.waiting .loading {
+  position: relative;
+}
+#PORTAL_VERA_PANEL .cameras .camera .video .mask.waiting .loading .circle {
+  width: 100px;
+  height: 100px;
+}
+#PORTAL_VERA_PANEL .cameras .camera .video .mask.waiting .loading .circle .path {
+  stroke: #000;
+  /*给画笔设置一个颜色*/
+  stroke-width: 3;
+  /*设置线条的宽度*/
+  stroke-dasharray: 95, 126;
+  /*设置实现长95，虚线长126*/
+  stroke-dashoffset: 0;
+  /*设置虚线的偏移位置*/
+}
+#PORTAL_VERA_PANEL .cameras .camera .video .mask.waiting .loading .txt {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 #PORTAL_VERA_PANEL .cameras .camera .video[video='true'] .mask.user {
   display: none;
@@ -591,6 +657,31 @@ table {
 }
 #PORTAL_VERA_PANEL .cameras .camera[camera-status='allow-error'] .mask.error {
   display: flex;
+}
+@keyframes loading-dash {
+  0% {
+    stroke-dasharray: 1, 126;
+    /*实线部分1，虚线部分126*/
+    stroke-dashoffset: 0;
+    /*前面1/126显示实线，后面125显示空白*/
+  }
+  50% {
+    stroke-dasharray: 95, 126;
+    /*实线部分95，虚线部分126*/
+    stroke-dashoffset: -31px;
+    /*顺时针偏移31/126，即前31/126显示空白，后面3/4显示线条*/
+  }
+  to {
+    stroke-dasharray: 6, 120;
+    /*实线部分6，虚线部分120*/
+    stroke-dashoffset: -120px;
+    /*最后顺时针偏移120/126，即前120/126显示空白，后面6点显示线条部分*/
+  }
+}
+@keyframes loading-rotate {
+  to {
+    transform: rotate(1turn);
+  }
 }
 #PORTAL_VERA_PANEL .invite {
   box-sizing: border-box;
