--- a/public/crx/vera/style/camera.css
+++ b/public/crx/vera/style/camera.css
@@ -93,6 +93,7 @@
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.off.svg');
 }
 .camera .video .opts .opt.audio {
+  background-color: #863733;
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/audio.off.svg');
 }
 .camera .video .opts .opt.pin {
@@ -105,6 +106,7 @@
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.on.svg');
 }
 .camera .video[audio='true'] .opts .opt.audio {
+  background-color: var(--button-bg-color);
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/audio.on.svg');
 }
 .camera .video[pin='true'] .opts .opt.pin {
@@ -115,6 +117,13 @@
 }
 .camera .video[waiting='true'] .mask.waiting {
   display: flex;
+}
+.camera .video[waiting='true'] .mask.waiting .loading .circle {
+  animation: loading-rotate 1.5s infinite ease-in-out;
+  /*给svg也加上一个旋转动画*/
+}
+.camera .video[waiting='true'] .mask.waiting .loading .circle .path {
+  animation: loading-dash 1.5s ease-in-out infinite;
 }
 .camera .video video {
   width: 200px;
@@ -156,6 +165,31 @@
 .camera .video .mask.waiting {
   display: none;
   background-color: var(--camera-bg-color);
+  width: 100%;
+  height: 100%;
+}
+.camera .video .mask.waiting .loading {
+  position: relative;
+}
+.camera .video .mask.waiting .loading .circle {
+  width: 100px;
+  height: 100px;
+}
+.camera .video .mask.waiting .loading .circle .path {
+  stroke: #000;
+  /*给画笔设置一个颜色*/
+  stroke-width: 3;
+  /*设置线条的宽度*/
+  stroke-dasharray: 95, 126;
+  /*设置实现长95，虚线长126*/
+  stroke-dashoffset: 0;
+  /*设置虚线的偏移位置*/
+}
+.camera .video .mask.waiting .loading .txt {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 .camera .video[video='true'] .mask.user {
   display: none;
@@ -175,4 +209,29 @@
 }
 .camera[camera-status='allow-error'] .mask.error {
   display: flex;
+}
+@keyframes loading-dash {
+  0% {
+    stroke-dasharray: 1, 126;
+    /*实线部分1，虚线部分126*/
+    stroke-dashoffset: 0;
+    /*前面1/126显示实线，后面125显示空白*/
+  }
+  50% {
+    stroke-dasharray: 95, 126;
+    /*实线部分95，虚线部分126*/
+    stroke-dashoffset: -31px;
+    /*顺时针偏移31/126，即前31/126显示空白，后面3/4显示线条*/
+  }
+  to {
+    stroke-dasharray: 6, 120;
+    /*实线部分6，虚线部分120*/
+    stroke-dashoffset: -120px;
+    /*最后顺时针偏移120/126，即前120/126显示空白，后面6点显示线条部分*/
+  }
+}
+@keyframes loading-rotate {
+  to {
+    transform: rotate(1turn);
+  }
 }
