refactor: vera widget drag exp

--- a/public/crx/vera/style/panel.less
+++ b/public/crx/vera/style/panel.less
@@ -146,15 +146,15 @@
       opacity: 1;
     }
   }
-  .drag {
-    // .drag();
-    position: absolute;
-    bottom: 12px;
-    left: -30px;
-    width: 20px;
-    height: 20px;
-    background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/drag.svg');
-  }
+  // .drag {
+  //   // .drag();
+  //   position: absolute;
+  //   bottom: 12px;
+  //   left: -30px;
+  //   width: 20px;
+  //   height: 20px;
+  //   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/drag.svg');
+  // }
   .topbar {
     display: none;
     position: absolute;
